--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ PSQL_PASSWORD = 1234
 
 # ADMIN PARAMS
 PWD_ADMIN = '1234'
-SERVER_HOST = 'https://spaceminds.am/'
+SERVER_HOST = 'https://spaceminds.am'
 SERVER_HOST_IMAGES = "https://spaceminds.am/images"
 SERVER_HOST_VIDEOS = "https://spaceminds.am/videos"
 SERVER_HOST_SLIDES = "https://spaceminds.am/images/slides"
