--- a/.env
+++ b/.env
@@ -10,16 +10,15 @@ ACCESS_TOKEN_ACTIVE_TIME='1h'
 
 PSQL_PORT = 5432
 PSQL_HOST = localhost
-PSQL_USER = postgres
-# PSQL_USER = myuser
-# PSQL_DATABASE = mydb
-PSQL_DATABASE = postgres
+PSQL_USER = myuser
+PSQL_DATABASE = mydb
 PSQL_PASSWORD = 1234
 
 # ADMIN PARAMS
 PWD_ADMIN = '1234'
-SERVER_HOST = 'http://localhost:3333'
-SERVER_HOST_IMAGES = "http://localhost:3333/images"
-SERVER_HOST_VIDEOS = "http://localhost:3333/videos"
-SERVER_HOST_SLIDES = "http://localhost:3333/images/slides"
-SERVER_HOST_GIF = "http://localhost:3333/images/gif"
+SERVER_HOST = 'https://spaceminds.am'
+SERVER_HOST_IMAGES = "https://spaceminds.am/images"
+SERVER_HOST_VIDEOS = "https://spaceminds.am/videos"
+SERVER_HOST_SLIDES = "https://spaceminds.am/images/slides"
+SERVER_HOST_GIF = "https://spaceminds.am/images/gif"
+~
